test de jenkinsfile minimale pour les microservices